docs/akka/2.2.5/_sources/project/links.txt
.. _support:

#########
 Project
#########

Commercial Support
^^^^^^^^^^^^^^^^^^

Commercial support is provided by `Typesafe <http://typesafe.com>`_.
Akka is now part of the `Typesafe Stack <http://typesafe.com/stack>`_.

Mailing List
^^^^^^^^^^^^

`Akka User Google Group <http://groups.google.com/group/akka-user>`_

`Akka Developer Google Group <http://groups.google.com/group/akka-dev>`_


Downloads
^^^^^^^^^

`<http://typesafe.com/stack/downloads/akka/>`_


Source Code
^^^^^^^^^^^

Akka uses Git and is hosted at `Github <http://github.com>`_.

* Akka: clone the Akka repository from `<http://github.com/akka/akka>`_


Releases Repository
^^^^^^^^^^^^^^^^^^^

All Akka releases are published via Sonatype to Maven Central, see
`search.maven.org
<http://search.maven.org/#search%7Cga%7C1%7Cg%3A%22com.typesafe.akka%22>`_

Snapshots Repository
^^^^^^^^^^^^^^^^^^^^

Nightly builds are available in http://repo.akka.io/snapshots/ as both ``SNAPSHOT`` and
timestamped versions.

For timestamped versions, pick a timestamp from
http://repo.akka.io/snapshots/com/typesafe/akka/akka-actor_2.10/.
All Akka modules that belong to the same build have the same timestamp.

sbt definition of snapshot repository
-------------------------------------

Make sure that you add the repository to the sbt resolvers::

  resolvers += "Typesafe Snapshots" at "http://repo.akka.io/snapshots/"

Define the library dependencies with the timestamp as version. For example::

    libraryDependencies += "com.typesafe.akka" % "akka-remote_2.10" % 
      "2.1-20121016-001042"

maven definition of snapshot repository
---------------------------------------

Make sure that you add the repository to the maven repositories in pom.xml::

  <repositories>
    <repository>
      <id>akka-snapshots</id>
      <name>Akka Snapshots</name>
      <url>http://repo.akka.io/snapshots/</url>
      <layout>default</layout>
    </repository>
  </repositories>  

Define the library dependencies with the timestamp as version. For example::

  <dependencies>
    <dependency>
      <groupId>com.typesafe.akka</groupId>
      <artifactId>akka-remote_2.10</artifactId>
      <version>2.1-20121016-001042</version>
    </dependency>
  </dependencies>



